SEC-1: add compilation option to create initial patterns
Signed-off-by: Massimiliano Bartoli <mbartoli@upmem.com>

--- a/README
+++ b/README
@@ -1,11 +1,23 @@
-Compile the ecc lib
-make 32  CC=dpu-upmem-dpurte-clang
+ECDSA signature verification
 
-Check the dump file
-llvm-objdump -x  src/examples/ecdsa_dpu > ecdsa_dpu.objdump
+    Compile the ecc lib
+    make 32  CC=dpu-upmem-dpurte-clang
 
-Compile the DPU binary
-make 32  CC=dpu-upmem-dpurte-clang -C src/examples/ 
+    Check the dump file
+    llvm-objdump -x  src/examples/ecdsa_dpu > ecdsa_dpu.objdump
+
+    Compile the DPU binary
+    make 32  CC=dpu-upmem-dpurte-clang -C src/examples/
+
+Build params and pub key patterns
+    Compile the ecc lib
+    make 32  CC=dpu-upmem-dpurte-clang SW=1
+
+    Check the dump file
+    llvm-objdump -x  src/examples/ecdsa_dpu > ecdsa_dpu.objdump
+
+    Compile the DPU binary
+    make 32  CC=dpu-upmem-dpurte-clang SW=1 -C src/examples/
 
 Execute the DPU binary
 cd src/examples/ && ./ecdsa_host  && cd -
